--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
             },
             "autoload": {
                 "psr-0" : {
-                    "Weaverryan\\DangerZone" : "src"
+                    "i80586\\SSFramework" : "framework/"
                 }
             }
         }
