Modified composer.json #2

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
             },
             "autoload": {
                 "psr-0" : {
-                    "i80586\\SSFramework" : "framework/"
+                    "i80586\\SSFramework" : "framework"
                 }
             }
         }
